fixed the problem with logo being too small on mobile and changed carousel to change automatically. and added instagram widget

--- a/main.css
+++ b/main.css
@@ -2,13 +2,13 @@
     color: aliceblue;
     font-size: 5vw;
     text-shadow: 2px 5px 10px black;
-
+    text-align: center;
     position: absolute;
-    top: 60%;
-    left: 15%;
+    top: 70%;
+    left: 50%;
     transform: translate(-50%, -50%);
-
-    opacity: 70%;
+    font-family:'Gill Sans',sans-serif;
+    opacity: 90%;
 }
 #pre-button{    
     position: absolute;
@@ -40,4 +40,11 @@
 .carousel-item{
     height: 50vw;
     object-fit: cover;
+}
+/* .insta-post{
+    box-shadow: 10px 5px 10px black;
+} */
+#carouselExampleInterval{
+    min-width: fit-content;
+    min-height: 100%;
 }
